--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,30 @@
 spring.application.name=chatbot-vendas
 spring.ai.openai.api-key=${OPENAI-API-KEY}
 api.security.token.secret=${JWT_SECRET:my-secret-key}
+api.security.token.refresh-secret=${JWT_REFRESH_SECRET:my-refresh-secret-key}
 
-# Configuração do banco de Dados MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/ChatSaaS_DB?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+# MySQL Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/ChatSaaS_DB?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root@2025
 
-# Configuração do Hibernate
+# Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
+
+# Server Configuration
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
+
+# Logging Configuration
+logging.level.root=INFO
+logging.level.com.sistema.chatbot=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.file.name=logs/chatbot-vendas.log
+
+# OpenAPI Configuration
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
 
